tests for projects show page good, added welcome

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,21 +1,14 @@
 <h1>Projects: View ALL (Index)</h1>
 <p>Listing projects</p>
 
-<nav class="navbar"> 
-  <ul>
-    <li class="active">
-      <%= link_to "Home", projects_path %><br/>      
-      <%= link_to "Projects", projects_path %>
-    </li>
-  </ul>
-</nav>
-
 
 <% @projects.each do |project| %>
 <p>
-  <%= project[:title] %><br /> 
+  <%= project[:title] %><br />
   <%= project[:teaser] %> <br />
   <%= project[:description] %> <br />
+  <%= project[:goal] %> <br />
+  <%= link_to "#{project[:title]}", "/projects/#{project.id}" %><li class="title"></li>
   </p>
 
 <% end %>
