log in and out added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,14 +7,16 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-
     <%= render 'layouts/shared/nav' %>
 
     <div class="container">
-        <%= yield %>
+        
+    
+    <% flash.each do |name, msg| %>
+    <%= content_tag :div, msg, :id => "flash_#{name}" %>
+    <% end %>
+    <%= yield %>
     </div>
-
 
 </body>
 </html>
