--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -7,10 +7,17 @@
           <li class="<%= 'active' if current_page? root_path %>">
             <%= link_to 'Home', :root %>
           </li>
-          <li class="<%= 'active' if current_page? projects_path %>">
+          <li class="<%= 'active' if controller_name == "projects" %>">
             <%= link_to 'Projects', :projects %>
           </li>
         </ul>
+          <div class="pull-right">
+          <% if logged_in? %>
+            <%= link_to 'Logout', logout_path, :method => :delete, class: 'btn' %>
+          <% else %>
+            <%= link_to 'Sign Up', [:new, :user], class: 'btn btn-primary' %>
+          <% end %>
+        </div>
       </div>
     </div>
   </div>
