--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -16,6 +16,7 @@
             <%= link_to 'Logout', logout_path, :method => :delete, class: 'btn' %>
           <% else %>
             <%= link_to 'Sign Up', [:new, :user], class: 'btn btn-primary' %>
+            <%= link_to 'Log In', login_path, class: 'btn btn-primary' %>
           <% end %>
         </div>
       </div>
