tests passing for welcome and auth

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -1,5 +1,9 @@
+
+
 @import "bootstrap";
 
 .navbar-inner {
-  background-color: blue;
+  background-image: linear-gradient(to bottom, gray, white);
+  height: 30px;
 }
+
