--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,8 +4,8 @@
 <%= form_for @user do |f| %>
  
   <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
+    <div class="alert">
+      <h2>Try again</h2>
       <ul>
         <% for message in @user.errors.full_messages %>
         <li><%= message %></li>
