added map model, d3 functions: hover, logos, 3 in total.  Needs refactoring badly

--- a/app/views/layouts/shared/_nav.html.erb
+++ b/app/views/layouts/shared/_nav.html.erb
@@ -10,6 +10,9 @@
           <li class="<%= 'active' if controller_name == "projects" %>">
             <%= link_to 'Projects', :projects %>
           </li>
+          <li class="<%= 'active' if controller_name == "maps" %>">
+            <%= link_to 'Maps', :maps %>
+          </li>
         </ul>
           <div class="pull-right">
           <% if logged_in? %>
