--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
+<meta charset="utf-8">
+<style>
 
-  <meta charset="utf-8">
-  <style>
-  path {
-      stroke: white;
-      stroke-width: 0.5px;
-      fill: #a6ee9a;
-  }
+path {
+  stroke: white;
+  stroke-width: 0.5px;
+  fill: #a6ee9a;
+    }
 
+div.tooltip {   
+  color: tomato;
+  position: absolute;           
+  text-align: center;           
+  width: 200px;                  
+  height: 100px;                 
+  padding: 5px;             
+  font: 20px sans-serif;        
+  background: lightsteelblue;   
+  border: 1px dashed white;      
+  border-radius: 8px;
+  opacity: 0.8; 
+}
 
   </style>
 <head>
@@ -44,6 +57,7 @@ var path = d3.geo.path()
 var g = svg.append("g");
 
 
+
 // load and display the world, draws the map for us.
 d3.json("/assets/world.json", function(error, topology) {
     g.selectAll("path")
@@ -52,6 +66,8 @@ d3.json("/assets/world.json", function(error, topology) {
       .enter()
         .append("path") // act on all path elements
         .attr("d", path); // add data we're going to display
+
+
 
 // place dot where cities are located
   g.append("circle")
@@ -63,13 +79,13 @@ d3.json("/assets/world.json", function(error, topology) {
     .attr("stroke", "white")
     .attr("stroke-width", 0.25)
     .on("mouseover", function(){ 
-               d3.select(this)
-                  .style("fill", "url(#image)");
-              })
-              .on("mouseout", function(){ 
-                   d3.select(this)
-                       .style("fill", "transparent");
-              });
+      d3.select(this)
+        .style("fill", "url(#image)");
+    })
+    .on("mouseout", function(){ 
+      d3.select(this) 
+        .style("fill", "transparent");
+    });
 
   g.append("circle")
     .attr("class", "logo")
@@ -80,13 +96,14 @@ d3.json("/assets/world.json", function(error, topology) {
     .attr("stroke", "white")
     .attr("stroke-width", 0.25)
     .on("mouseover", function(){ 
-               d3.select(this)
-                  .style("fill", "url(#image1)");
-              })
-              .on("mouseout", function(){ 
-                   d3.select(this)
-                       .style("fill", "transparent");
-              });
+      d3.select(this)
+        .style("fill", "url(#image1)");
+    })
+    .on("mouseout", function(){ 
+      d3.select(this)
+        .style("fill", "transparent");
+    });
+    
 
   g.append("circle")
     .attr("class", "logo")
@@ -97,14 +114,45 @@ d3.json("/assets/world.json", function(error, topology) {
     .attr("stroke", "white")
     .attr("stroke-width", 0.25)
     .on("mouseover", function(){ 
-               d3.select(this)
-                  .style("fill", "url(#image2)");
-              })
-              .on("mouseout", function(){ 
-                   d3.select(this)
-                       .style("fill", "transparent");
-              });
+      d3.select(this)
+        .style("fill", "url(#image2)");
+    })
+    .on("mouseout", function(){ 
+      d3.select(this)
+        .style("fill", "transparent");
+    });
+
+
+//make a TOOLTIP 
+var tooltip = d3.select("body")
+  .append("div")
+  .attr("class", "tooltip")
+  .style("position", "absolute")
+  .style("z-index", "5")
+  .style("visibility", "hidden")
+  .text("Example of TOOLTIP TEXT HERE");
+
+  
+
+// when mouseover a logo, it should launch tooltip  
+d3.selectAll(".logo")
+  .on("mouseover.tooltip", function(){
+    return tooltip
+    .style("visibility", "visible");
+  })
+  .on("mousemove.tooltip", function(){
+    return tooltip
+    .style("top", (event.pageY-10)+"px")
+    .style("left",(event.pageX+10)+"px");
+  })
+  .on("mouseout.tooltip", function(){
+    return tooltip
+    .style("visibility", "hidden");
+  });
+
+ 
 });
+
 
 
 // moving and panning on the map: 
@@ -125,6 +173,7 @@ function move() {
   g.style("stroke-width", 1 / s).attr("transform", "translate(" + t + ")scale(" + s + ")");
 }
 
+
 </script>
 
 <!-- est. pattern for logos to insert into d3 circle object -->
@@ -143,13 +192,6 @@ function move() {
       <image width="20" height="20" xlink:href="http://cdn.skilledup.com/wp-content/uploads/2013/08/hacker-school.jpg"></image>
     </pattern>
   </defs>
-
-
-<script>
-// jquery to add tooltip
-$(document).ready(function() {
-    
-});
 
 
 </script>
